# pdi_ufal

./: .gitignore  CMakeLists.txt
cmake/: gslconfig.cmake
src/: .#test.cpp  main.cpp
